# hue-dashboard

./: .gitignore  App.hs  AppDefs.hs  BackgroundProcessing.hs  CmdLineOptions.hs  HueBroker.hs  HueJSON.hs  HueREST.hs  HueSetup.hs  LightColor.hs  Main.hs  PersistConfig.hs  ProcFS.hs  README.md  Trace.hs  Util.hs  Vagrantfile  WebUI.hs  WebUIHelpers.hs  WebUIREST.hs  WebUITileBuilding.hs  WebUITileBuildingScenes.hs  WebUITileBuildingSchedules.hs  haskell-hue.cabal  hue-dashboard.cabal  stack.yaml
static/: dashboard.css  dashboard.html
vagrant_scripts/: bootstrap_app.sh  bootstrap_vagrant.sh
