name:                hue-dashboard
version:             0.1.0.0
synopsis:            Web dashboard for Philips Hue light bulbs
description:         Please see README.md
homepage:            https://github.com/blitzcode/hue-dashboard#readme
license:             MIT
author:              Tim C. Schroeder
maintainer:          www.blitzcode.net
copyright:           (C) 2016 Tim C. Schroeder
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hue-dashboard
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5,
                    mtl,
                    transformers,
                    lens,
                    ansi-terminal,
                    unordered-containers,
                    bytestring,
                    text,
                    http-conduit,
                    http-client,
                    aeson,
                    attoparsec,
                    time,
                    yaml,
                    exceptions,
                    filepath,
                    hostname,
                    threepenny-gui,
                    stm,
                    async,
                    JuicyPixels,
                    vector,
                    blaze-html,
                    random,
                    process
  ghc-options:      -Wall -rtsopts -with-rtsopts=-N -O2 -j -threaded -dynamic
  ghc-prof-options: -fprof-auto -caf-all

